feat: add authentication system with admin panel
- Add JWT-based authentication with PostgreSQL backend
- Create login page with X-TRI branding
- Add admin panel for managing school users
- Implement user CRUD operations (create, update, delete)
- Add logout functionality in sidebar
- Show admin menu for admin users
- Update API client with auth token handling
- Add create_admin.py script for initial setup

--- a/enem-analytics/backend/requirements.txt
+++ b/enem-analytics/backend/requirements.txt
@@ -3,9 +3,16 @@ uvicorn[standard]
 pandas
 numpy
 scikit-learn
-pydantic
+pydantic[email]
 python-multipart
 xgboost
 joblib
 scipy
 requests
+# Authentication
+python-jose[cryptography]
+passlib[bcrypt]
+# Database
+sqlalchemy
+psycopg2-binary
+python-dotenv
