--- a/.gitignore
+++ b/.gitignore
@@ -1,98 +1,39 @@
-# Byte-compiled / optimized / DLL files
+# Large data files
+microdados-enem/
+enem-analytics/backend/data/microdados_censo_escolar_2024/
+enem-analytics/backend/data/microdados_censo_2024.zip
+dados/
+*.csv
+*.zip
+*.crdownload
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Environments
 .env
-.venv
-env/
+.venv/
 venv/
-ENV/
-env.bak/
-venv.bak/
+*.egg-info/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Node
+node_modules/
+.next/
+.turbo/
 
-# pyenv
-.python-version
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Ruff
-.ruff_cache/
-
-# IDEs
+# IDE
 .idea/
 .vscode/
 *.swp
-*.swo
-*~
 
-# OS files
+# OS
 .DS_Store
 Thumbs.db
 
-# Model files (typically large)
-*.pt
-*.pth
-*.bin
-*.onnx
-*.safetensors
+# Models
+*.joblib
+*.pkl
 
-# Logs
-*.log
-
-test_api_client.pyenem-analytics/backend/data/microdados_censo_escolar_2024/
-enem-analytics/backend/data/microdados_censo_2024.zip
+# Cache
+*.cache/
+.cache/
