--- a/enem-analytics/backend/Dockerfile
+++ b/enem-analytics/backend/Dockerfile
@@ -13,4 +13,4 @@ COPY . .
 EXPOSE 8000
 
 # Run
-CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}
