feat: add Dockerfile for frontend deployment

--- a/enem-analytics/frontend/railway.toml
+++ b/enem-analytics/frontend/railway.toml
@@ -1,9 +1,9 @@
 [build]
-builder = "nixpacks"
+builder = "DOCKERFILE"
+dockerfilePath = "./Dockerfile"
 
 [deploy]
-startCommand = "pnpm start"
 healthcheckPath = "/"
-healthcheckTimeout = 100
+healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
