--- a/enem-analytics/backend/Dockerfile
+++ b/enem-analytics/backend/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy backend files (context is repo root)
-COPY enem-analytics/backend/ .
+# Copy all files (root directory is enem-analytics/backend)
+COPY . .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
