fix: pin bcrypt==4.0.1 for passlib compatibility

--- a/enem-analytics/backend/requirements.txt
+++ b/enem-analytics/backend/requirements.txt
@@ -12,6 +12,7 @@ requests==2.32.3
 # Authentication
 python-jose[cryptography]
 passlib[bcrypt]
+bcrypt==4.0.1
 # Database
 sqlalchemy
 psycopg2-binary
