--- a/enem-analytics/backend/requirements.txt
+++ b/enem-analytics/backend/requirements.txt
@@ -17,4 +17,4 @@ bcrypt==4.0.1
 sqlalchemy
 psycopg2-binary
 python-dotenv
-# Force rebuild qui 25 dez 2025 15:37:57 -03
+# Force rebuild qui 25 dez 2025 17:10:00 -03 - bcrypt fix
